--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -102,6 +102,7 @@
   }
 
   .btn-container button {
+    font-family: 'Manrope', sans-serif !important;
     background-color: var(--main-blue-color);
     color: rgba(255, 255, 255, 1);
     box-shadow: 0 5px 15px rgba(38, 58, 142, 0.4);
