--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -3,6 +3,8 @@ import Layout from '../layouts/Layout.astro';
 import BlogPost from '../components/BlogPost.astro';
 const pageTitle = 'Blog';
 const allPosts = await Astro.glob('../pages/posts/*.md');
+allPosts.sort((a, b) => Date.parse(b.frontmatter.pubDate) - Date.parse(a.frontmatter.pubDate));
+
 ---
 
 <Layout pageTitle={pageTitle}>
