--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -24,6 +24,9 @@ const alternateCase = (name: string) => {
             projects.map((project) => {
               return (
                 <div data-project={JSON.stringify(project)} class="project-heading">
+                  <div class="tooltip hidden">
+                    <p>Click for more details</p>
+                  </div>
                   <a href={`/projects/${project.slug}`}>
                     <h2>{alternateCase(project.name)}</h2>
                     <div>
@@ -73,6 +76,20 @@ const alternateCase = (name: string) => {
       padding: 1.5rem;
       margin: 1rem;
       cursor: pointer;
+      position: relative;
+    }
+
+    .tooltip {
+      color: #fff;
+      font-weight: bold;
+      font-size: 0.8rem;
+      padding: 0.5rem;
+      border-radius: 8px;
+      position: absolute;
+      top: -10px;
+      left: 10px;
+      background-color: var(--main-blue-color);
+      font-family:;
     }
 
     .project-heading a {
@@ -178,13 +195,27 @@ const alternateCase = (name: string) => {
     projectImageContainer.firstElementChild?.setAttribute('src', src);
   };
 
-  const handleMouseEnter = (e: Event) => {
-    const target = e.target as HTMLElement;
-    const projectImage = getProjectImage(target);
-    applyProjectImage(projectImage, projectImageContainer!);
+  const toggleToolTip = (tooltip: HTMLElement | null, show: boolean) => {
+    if (!tooltip) return;
+    if (show) {
+      tooltip.classList.remove('hidden');
+    } else {
+      tooltip.classList.add('hidden');
+    }
   };
 
-  const handleMouseLeave = () => {
+  const handleMouseEnter = (e: Event) => {
+    const target = e.target as HTMLElement;
+    const tooltip = target.firstElementChild as HTMLElement;
+    const projectImage = getProjectImage(target);
+    applyProjectImage(projectImage, projectImageContainer!);
+    toggleToolTip(tooltip, true);
+  };
+
+  const handleMouseLeave = (e: Event) => {
+    const target = e.target as HTMLElement;
+    const tooltip = target.firstElementChild as HTMLElement;
+    toggleToolTip(tooltip, false);
     projectImageContainer?.firstElementChild?.setAttribute('src', '');
     projectImageContainer?.firstElementChild?.classList.add('hidden');
   };
