--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -4,58 +4,54 @@ const { frontmatter } = Astro.props;
 ---
 
 <Layout pageTitle={frontmatter.title}>
-    <div class="container">
-        <div class="content">
-            <header>
-                <p>{frontmatter.pubDate.slice(0, 10)}</p>
-                <p><em>{frontmatter.description}</em></p>
-                <p>Written by: {frontmatter.author}</p>
-                <img
-                    src={frontmatter.image.url}
-                    width="300"
-                    alt={frontmatter.image.alt}
-                />
-            </header>
-            <div class="slot">
-                <slot />
-            </div>
-        </div>
+  <div class="container">
+    <div class="content">
+      <header>
+        <p>{frontmatter.pubDate.slice(0, 10)}</p>
+        <p><em>{frontmatter.description}</em></p>
+        <p>Written by: {frontmatter.author}</p>
+        <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
+      </header>
+      <div class="slot">
+        <slot />
+      </div>
     </div>
+  </div>
 </Layout>
 
 <style>
-    p {
-        line-height: 1.8;
-    }
+  p {
+    line-height: 1.8;
+  }
 
-    .slot {
-        margin: 2rem auto;
-    }
+  .slot {
+    margin: 2rem auto;
+  }
 
-    header {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
+  header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 
-    .container {
-        max-width: 1200px;
-        margin: 0 auto;
-    }
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
 
+  .content {
+    border-radius: 8px;
+    width: 750px;
+    margin: 1rem auto;
+    background: #2a2929;
+    padding: 0.5rem;
+    color: var(--main-text-color);
+  }
+
+  @media (max-width: 768px) {
     .content {
-        border-radius: 8px;
-        width: 750px;
-        margin: 1rem auto;
-        background: #2a2929;
-        padding: 0.5rem;
-        color: var(--main-text-color);
+      width: 95%;
     }
-
-    @media (max-width: 768px) {
-        .content {
-            width: 95%;
-        }
-    }
+  }
 </style>
