feat: write custom hook article

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -7,7 +7,7 @@ allPosts.sort((a, b) => Date.parse(b.frontmatter.pubDate) - Date.parse(a.frontma
 ---
 
 <Layout pageTitle={pageTitle}>
-  <h2>Ian's Code Corner</h2>
+  <h2>Blog</h2>
   <div class="blog-posts">
     <ul>
       {
