--- a/src/pages/projects/[project].astro
+++ b/src/pages/projects/[project].astro
@@ -46,7 +46,7 @@ const project = projects.find((project) => project.slug === param);
                                     text="Website"
                                     icon="fa-solid fa-link"
                                 />
-                                {project.demo.length > 0 &&
+                                {project.demo !== undefined && project.demo.length > 0 &&
                                  <Social href={project.demo} text="Demo" icon="fa-solid fa-video" />
                                 }
                             </div>
