feat: write a post about linked list and array list in java, also change prism theme

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,7 +39,10 @@ const { pageTitle } = Astro.props as Props;
         />
         <script src="https://kit.fontawesome.com/20d949d22b.js" crossorigin="anonymous"
         ></script>
-        <link href="/themes/prism-duotone-sea.css" rel="stylesheet" />
+        <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-tomorrow.min.css"
+/>
     </head>
     <body>
         <Header />
