bug: copyright year will not update with javascript so i had to hardcode it for now

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ console.log(year)
 ---
 
 <footer class="footer">
-    <p>{name} &copy; {year}</p>
+    <p>{name} &copy; 2025</p>
 </footer>
 
 <style>
