--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,7 +2,16 @@
 import Layout from '../layouts/Layout.astro';
 import BlogPost from '../components/BlogPost.astro';
 const pageTitle = 'Blog';
-const allPosts = await Astro.glob('../pages/posts/*.md');
+interface BlogPost {
+  frontmatter: {
+    title: string;
+    description: string;
+    pubDate: string;
+    image: { url: string };
+  };
+  url: string;
+}
+const allPosts = Object.values(import.meta.glob<BlogPost>('../pages/posts/*.md', {eager: true}));
 allPosts.sort((a, b) => Date.parse(b.frontmatter.pubDate) - Date.parse(a.frontmatter.pubDate));
 ---
 
